# tap-salesforce

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  meltano.yml  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/workflows/: ci_workflow.yml  release.yaml
tap_salesforce/: __init__.py  __main__.py  client.py  streams.py  sync.py  tap.py
tap_salesforce/salesforce/: __init__.py  bulk.py  bulk2.py  credentials.py  exceptions.py  rest.py
tests/: __init__.py  test_core.py
