[tool.poetry]
name = "tap-salesforce"
version = "0.0.1"
description = "`tap-salesforce` is a Singer tap for salesforce, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Ethan Stein"]
keywords = [
    "ELT",
    "salesforce",
]
license = "Elastic-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
singer-sdk = "^0.30.0"
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pendulum = "^2.1.2"
black = "^23.3.0"
singer-sdk = { version="*", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_salesforce"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_salesforce"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-salesforce = 'tap_salesforce.tap:TapSalesforce.cli'
